--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ nav {
     position: absolute;
     min-width: 300px;
     max-width: 600px;
-    height: 100vh;
+    min-height: 100vh;
     top: 0px;
     right: 0px;
     background-color: var(--main-color);
@@ -94,9 +94,6 @@ nav {
     position: relative;
     right: 10px;
     bottom: 5px;
-}
-
-.cart-bubble p {
     font-family: poppins;
     color: rgb(255, 255, 255);
     font-size: 15px;
@@ -113,10 +110,27 @@ nav {
 .cart {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     gap: 10px;
-    height: 100%;
+    height: 250px;
+    overflow-y: scroll;
+}
+
+.cart::-webkit-scrollbar {
+    width: 20px;
+}
+
+.cart::-webkit-scrollbar-track {
+    background-color: rgba(0, 0, 0, 0);
+    border-radius: 10px;
+}
+
+.cart::-webkit-scrollbar-thumb {
+    background: #b29a71;
+    border-radius: 10px;
+    border: 6px solid transparent;
+    background-clip: content-box;
 }
 
 .cart-item-card {
@@ -124,7 +138,8 @@ nav {
     justify-content: flex-start;
     align-items: center;
     border: 1px solid #A69476;
-    width: 300px;
+    min-width: 300px;
+    max-width: 350px;
     height: 120px;
     padding: 10px;
     gap: 15px;
@@ -144,7 +159,7 @@ nav {
 
 .card-item-img-container img {
     height: 170px;
-    position: absolute;
+    position: relative;
     filter: drop-shadow(0px 6px 4px rgba(0, 0, 0, 0.4));
 }
 
@@ -154,15 +169,19 @@ nav {
     justify-content: space-between;
     align-items: flex-start;
     height: 100%;
-    width: 160px;
+    width: 100%;
 }
 
 .card-item-text,
 .card-item-price {
     color: #FFF;
     font-family: Poppins;
-    font-size: 17px;
+    font-size: 16px;
     font-weight: 400;
+}
+
+.card-item-text p:nth-child(2) {
+    font-weight: 600;
 }
 
 .card-item-price-container {
@@ -248,6 +267,12 @@ nav {
     font-family: Poppins;
     font-size: 18px;
     font-weight: 400;
+}
+
+.disable-button {
+    background-color: #acacac;
+    color: #3d3d3d;
+    cursor: not-allowed;
 }
 
 .nav-icon-cart-container input,
@@ -782,7 +807,7 @@ article {
 
 .item-add-button:active {
     background-color: #b29a7130;
-} 
+}
 
 .item-section-button {
     border-radius: 15px;
